app/assets/stylesheets/session/session.scss
.session-form-container {
  background: #36393f;
  border-radius: 5px;
  box-shadow: 0 2px 10px 0 rgba(0, 0, 0, .2);
  box-sizing: border-box;
  color: #72767d;
  font-size: 18px;
  padding: 40px;
  width: 480px;
  min-height: 424px;
  border-color: rgba(0, 0, 0, .3);
}

.session-form-title {
  display: flex;
  flex-direction: column;
  align-items: center;
  color: #fff;
  font-size: 26px;
  line-height: 32px;
  font-weight: 300;
  justify-content: center;
  margin-bottom: 20px;
    p{
      margin-top: 10px;
      color: #72767d;
      font-size: 18px;
      line-height: 22px;
    }
}

.session-form-box {
  .session-input {
    background-color: rgba(0, 0, 0, .1);
    border-color: rgba(0, 0, 0, .3);
    color: #f6f6f7;
    width: 100%;
    height: 40px;
    padding: 10px;
    border-radius: 3px;
    border-width: 1px;
    border-style: solid;
    font-size: 14px;
    margin-top: 10px;
  }
  display: flex;
  flex-direction: column;
  align-items: stretch;
  width: auto;
  color: #72767d;
  font-weight: 600;
  font-size: 12px;
  font-family: inherit;
  height: 100%;

  label {
    margin-bottom: 20px;
    color: #b9bbbe;
  }
}

.session-submit {
  background: #677bc4;
  font-size: 16px;
  line-height: 24px;
  color: #fff;
  height: 44px;
  min-height: 44px;
  width: 100%;
  border: none;
  border-radius: 3px;
  box-sizing: border-box;
  text-align: center;
}

.session-main {
  background-image: image-url('cartoonBackground.jpg');
  background-size: cover;
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.session-redirect {
  font-size: 14px;
  color: #72767d;
}

.session-link {
  color: #7289da;
}

 .session-form-appear {
   opacity: 0.01;
   transform: translate(5%, -20%);
 }

 .session-form-appear.session-form-appear-active {
   opacity: 1;
   transform: translateY(0%);
   transition: opacity 500ms, transform 350ms;
 }

 .session-logo{
   display: flex;
   font-size: 45px;
   align-items: center;
   position: absolute;
   top: 1%;
   left: 1%;
   color: #7289da;
   text-shadow:0px 1px #36393f;
   p {
     font-family: 'Baloo Bhai',
     cursive;
   }
 }

 .session-errors{
   color: #f04747;
 }

 .handle-demo {
   
 }
// .session-form-logo-appear {
//   opacity: 0.01;
//   transform: translate(-5%, -20%);
// }

// .session-form-logo-appear.session-form-logo-appear-active {
//   opacity: 1;
//   transform: translateY(0%);
//   transition: opacity 200ms, transform 800ms;
// }

